2001-04-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpq/ntpq.c: Reorder and add some TEST flag bits.
	* ntpd/ntp_proto.c (transmit): Also bail if access denied.
	(receive): Lose RES_DEMOBILIZE and (some?) RES_DONTSERVE and
	RES_LIMITIED stuff.  Update Kiss-Of-Death (KoD) docs.
	Call fast_xmit with new 3rd parameter (restrict_mask).
	Before checking for an authentic packet, check the restrict_mask
	for RES_{DONTSERVE,LIMITED,NOPEER}.
	Check restrictions in AM_PROCPKT case.
	(peer_clear): Don't lose the stratum if the peer->flags don't
	indicate FLAG_REFCLOCK.
	(fast_xmit): Take restrict mask as a new argument, and handle
	KoD.  Reorder some code.
	From: Dave Mills.

2001-04-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpdc/ntpdc_ops.c: restrict/unrestrict support for version and
	demobilize.  Implement demobilze.
	* ntpd/ntp_proto.c (receive): Improve version testing, including
	RES_DEMOBILIZE support.
	(fast_xmit): Patches to kiss-of-death packet.
	* ntpd/ntp_loopfilter.c (local_clock): S_SYNC case now also checks
	abs(clock_offset) against CLOCK_PGATE*sys_jitter.
	* ntpd/ntp_config.c: CONF_RES_DEMOBILIZE/demobilize support.
	* include/ntp_config.h (CONF_RES_DEMOBILIZE): Added.
	* include/ntp.h (RES_DEMOBILIZE): Added.
	From Dave Mills.

2001-04-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/accopt.htm: Document the "version" parameter
	From Dave Mills.

	* ntpd/ntp_proto.c (fast_xmit): Implement DENY mode.
	From Dave Mills.

	* ntpd/ntp_config.c: Add the "allan" tinker variable.
	From: Juha Sarlin <juha@c3l.tyreso.se>

	* ntpd/refclock_hopfpci.c (hopfpci_start): Lose the "correct_any"
	stuff - it's both obsolete and wrong.

	* ntpd/ntp_proto.c (receive): Keep track of packet versions.
	Implement RES_LIMITED.
	* include/ntp_config.h (CONF_RES_LIMITED): 
	* include/ntp.h (RES_LIMITED): Leave the bits in the original
	order.
	From Dave Mills.

	* util/timetrim.c:
	* util/Makefile.am:
	* ntpdc/ntpdc_ops.c:
	* ntpd/refclock_nmea.c:
	* libntp/snprintf.c: